# a-puzzle-a-day-solver

./: Cargo.toml  README.md  index.html  index.js  solver.js  style.css  worker.js
.github/workflows/: deploy.yaml
pkg/: package.json  solver.d.ts  solver.js  solver_bg.wasm  solver_bg.wasm.d.ts
src/: lib.rs
static/: worker.js
