[package]
name = "solver"
version = "0.1.0"
edition = "2024"
description = "A WebAssembly solver for the a-puzzle-a-day game"
license = "MIT"
repository = "https://github.com/Nagatani/a-puzzle-a-day-solver"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[profile.release]
lto = true
opt-level = 's'